------------------
Pylint's ChangeLog
------------------

What's New in Pylint 2.2?
=========================

Release date: TBA

   * ``too-few-public-methods`` is not reported for ``typing.NamedTuple``

     Close #2459

   * ```too-few-public-methods`` is not reported for dataclasses created with options.

     Close #2488

   * Remove wrong modules from 'bad-python3-import'.

     Close #2453

   * The ``json`` reporter prints an empty list when no messages are emitted

     Close #2446

   * Add a new check, ``duplicate-string-formatting-argument``

     This new check is emitted whenever a duplicate string formatting argument
     is found.

     Close #497

   * ``assignment-from-no-return`` is not emitted for coroutines.

     Close #1715

   * Report format string type mismatches.

   * ``consider-using-ternary`` and ``simplified-boolean-expression`` no longer emit for sequence based checks

     Close #2473

   * Handle ``AstroidSyntaxError`` when trying to import a module.

     Close #2313

   * Allow ``__module__`` to be redefined at a class level. Close #2451

   * ``pylint`` used to emit a ``unused-variable`` error if unused import was found in the function. Now instead of
     ``unused-variable``, ``unused-import`` is emitted.

     Close #2421

   * Handle asyncio.coroutine when looking for ``not-an-iterable`` check.

     Close #996

   * The ``locally-enabled`` check is gone.

     Close #2442

   * Infer decorated methods when looking for method-hidden

     Close #2369

   * Pick the latest value from the inferred values when looking for ``raising-non-exception``

     Close #2431

   * Extend the TYPE_CHECKING guard to TYPE_CHECKING name as well, not just the attribute

     Close #2411

   * Ignore import x.y.z as z cases for checker `useless-import-alias`.

     Close #2309

   * Fix false positive ``undefined-variable`` and ``used-before-assignment`` with nonlocal keyword usage.

     Close #2049
