@@ -7,6 +7,10 @@ What's New in Pylint 2.2?
 
 Release date: TBA
 
+   * Add a new check, ``simplifiable-if-expression`` for expressions like ``True if cond else False``.
+
+     Close #2487
+
    * ``too-few-public-methods`` is not reported for ``typing.NamedTuple``
 
      Close #2459
